--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,11 +3,12 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+ @import "tailwindcss";
 
 :root {
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
+	/* --black: 15, 18, 25; */
 	--gray: 96, 115, 159;
 	--gray-light: 229, 233, 240;
 	--gray-dark: 34, 41, 57;
@@ -17,21 +18,21 @@
 		0 16px 32px rgba(var(--gray), 33%);
 }
 @font-face {
-	font-family: 'Atkinson';
+	font-family: 'Atkinson Hyperlegible';
 	src: url('/fonts/atkinson-regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
 @font-face {
-	font-family: 'Atkinson';
+	font-family: 'Atkinson Hyperlegible';
 	src: url('/fonts/atkinson-bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
 }
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: 'Atkinson Hyperlegible', sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -79,7 +80,7 @@ b {
 	font-weight: 700;
 }
 a {
-	color: var(--accent);
+	/* color: var(--accent); */
 }
 a:hover {
 	color: var(--accent);
