--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
  @import "tailwindcss";
+ @plugin "daisyui";
+
 
 :root {
 	--accent: #2337ff;
@@ -34,14 +36,14 @@
 body {
 	font-family: 'Atkinson Hyperlegible', sans-serif;
 	margin: 0;
-	padding: 0;
+	/* padding: 0; */
 	text-align: left;
 	background: linear-gradient(var(--gray-gradient)) no-repeat;
 	background-size: 100% 600px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
-	font-size: 20px;
+	/* font-size: 20px; */
 	line-height: 1.7;
 }
 main {
