--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,7 +11,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="fr" data-theme="light">
 	<head>
 		<BaseHead title={title} description={description} />
 	</head>
