--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -297,7 +297,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-zinc-400 dark:text-zinc-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
 							</svg>
-							<h3 class="text-xl font-bold dark:text-zinc-400 mb-2 text-center">Voir tous nos articles</h3>
+							<h3 class="text-xl font-bold dark:text-zinc-400 mb-2 text-center hover:text-primary">Voir tous nos articles</h3>
 							<p class="text-zinc-600 dark:text-zinc-400 text-center">
 								Explorez notre blog pour plus d'insights sur la technologie et l'innovation.
 							</p>
